@@ -1,6 +1,7 @@
 import pytest
 
 from fiona import crs, _crs
+from fiona.env import Env
 from fiona.errors import CRSError
 
 from .conftest import requires_gdal_lt_3
@@ -134,3 +135,59 @@ def test_custom_crs():
                 'AUTHORITY["EPSG","9122"]],AUTHORITY["EPSG","4326"]]'
             )
     assert _crs.crs_to_wkt(CustomCRS()).startswith('GEOGCS["WGS 84"')
+
+
+def test_crs__version():
+    target_crs = (
+        'PROJCS["IaRCS_04_Sioux_City-Iowa_Falls_NAD_1983_2011_LCC_US_Feet",'
+        'GEOGCS["GCS_NAD_1983_2011",DATUM["D_NAD_1983_2011",'
+        'SPHEROID["GRS_1980",6378137.0,298.257222101]],'
+        'PRIMEM["Greenwich",0.0],UNIT["Degree",0.0174532925199433]],'
+        'PROJECTION["Lambert_Conformal_Conic"],'
+        'PARAMETER["False_Easting",14500000.0],'
+        'PARAMETER["False_Northing",8600000.0],'
+        'PARAMETER["Central_Meridian",-94.83333333333333],'
+        'PARAMETER["Standard_Parallel_1",42.53333333333333],'
+        'PARAMETER["Standard_Parallel_2",42.53333333333333],'
+        'PARAMETER["Scale_Factor",1.000045],'
+        'PARAMETER["Latitude_Of_Origin",42.53333333333333],'
+        'UNIT["Foot_US",0.3048006096012192]]'
+    )
+    assert _crs.crs_to_wkt(target_crs, wkt_version="WKT2_2018").startswith(
+        'PROJCRS["IaRCS_04_Sioux_City-Iowa_Falls_NAD_1983_2011_LCC_US_Feet"'
+    )
+
+
+def test_crs__esri_only_wkt():
+    """https://github.com/Toblerity/Fiona/issues/977"""
+    target_crs = (
+        'PROJCS["IaRCS_04_Sioux_City-Iowa_Falls_NAD_1983_2011_LCC_US_Feet",'
+        'GEOGCS["GCS_NAD_1983_2011",DATUM["D_NAD_1983_2011",'
+        'SPHEROID["GRS_1980",6378137.0,298.257222101]],'
+        'PRIMEM["Greenwich",0.0],UNIT["Degree",0.0174532925199433]],'
+        'PROJECTION["Lambert_Conformal_Conic"],'
+        'PARAMETER["False_Easting",14500000.0],'
+        'PARAMETER["False_Northing",8600000.0],'
+        'PARAMETER["Central_Meridian",-94.83333333333333],'
+        'PARAMETER["Standard_Parallel_1",42.53333333333333],'
+        'PARAMETER["Standard_Parallel_2",42.53333333333333],'
+        'PARAMETER["Scale_Factor",1.000045],'
+        'PARAMETER["Latitude_Of_Origin",42.53333333333333],'
+        'UNIT["Foot_US",0.3048006096012192]]'
+    )
+    assert _crs.crs_to_wkt(target_crs).startswith(
+        (
+            'PROJCS["IaRCS_04_Sioux_City-Iowa_Falls_NAD_1983_2011_LCC_US_Feet"',
+            'PROJCRS["IaRCS_04_Sioux_City-Iowa_Falls_NAD_1983_2011_LCC_US_Feet"'  # GDAL 3.3+
+        )
+    )
+
+
+def test_to_wkt__env_version():
+    with Env(OSR_WKT_FORMAT="WKT2_2018"):
+        assert _crs.crs_to_wkt("EPSG:4326").startswith('GEOGCRS["WGS 84",')
+
+
+def test_to_wkt__invalid_version():
+    with pytest.raises(CRSError):
+        _crs.crs_to_wkt("EPSG:4326", wkt_version="invalid")
